--- a/spring-boot-admin-ldap/pom.xml
+++ b/spring-boot-admin-ldap/pom.xml
@@ -45,6 +45,18 @@
 			<artifactId>spring-boot-admin-server-ui-login</artifactId>
 			<version>${spring-boot-admin.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.ldap</groupId>
+            <artifactId>spring-ldap-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-ldap</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.unboundid</groupId>
+            <artifactId>unboundid-ldapsdk</artifactId>
+        </dependency>
 	</dependencies>
 	<build>
 		<finalName>${project.artifactId}</finalName>
