--- a/spring-boot-admin-heroku/src/main/resources/application.yml
+++ b/spring-boot-admin-heroku/src/main/resources/application.yml
@@ -32,14 +32,9 @@ spring:
   profiles: secure
   boot:
     admin:
-      username: "${security.user.name}"       #These two are needed so that the client
-      password: "${security.user.password}"   #can register at the protected server api
+      username: "${spring.security.user.name}"       #These two are needed so that the client
+      password: "${spring.security.user.password}"   #can register at the protected server api
       client:
         metadata:
-          user.name: "${security.user.name}"          #These two are needed so that the server
-          user.password: "${security.user.password}"  #can access the proteceted client endpoints
-
-security:
-  user:
-    name: user
-    password: ***REMOVED***
+          user.name: "${spring.security.user.name}"          #These two are needed so that the server
+          user.password: "${spring.security.user.password}"  #can access the proteceted client endpoints
