sonatype snapshot repo

--- a/pom.xml
+++ b/pom.xml
@@ -10,4 +10,16 @@
 		<module>spring-boot-admin-heroku</module>
 		<module>spring-boot-admin-ldap</module>
 	</modules>
+	<repositories>
+		<repository>
+			<id>snapshots-repo</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 </project>
