--- a/spring-boot-admin-heroku/pom.xml
+++ b/spring-boot-admin-heroku/pom.xml
@@ -12,6 +12,7 @@
 		<version>2.0.0.RELEASE</version>
 	</parent>
 	<properties>
+		<java.version>9</java.version>
 		<spring-boot-admin.version>2.0.0-SNAPSHOT</spring-boot-admin.version>
 	</properties>
 	<dependencies>
