--- a/spring-boot-admin-ldap/pom.xml
+++ b/spring-boot-admin-ldap/pom.xml
@@ -4,26 +4,21 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.tbosch.spring.boot.admin</groupId>
 	<artifactId>spring-boot-admin-ldap</artifactId>
-	<version>1.0.0</version>
-	<packaging>war</packaging>
+	<version>1.1.0</version>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.6.RELEASE</version>
+		<version>2.0.3.RELEASE</version>
 	</parent>
 	<properties>
-		<java.version>1.8</java.version>
-		<spring-boot-admin.version>1.5.4</spring-boot-admin.version>
+		<java.version>10</java.version>
+		<spring-boot-admin.version>2.0.1</spring-boot-admin.version>
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-starter-server</artifactId>
+			<version>${spring-boot-admin.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>de.codecentric</groupId>
@@ -31,19 +26,12 @@
 			<version>${spring-boot-admin.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>de.codecentric</groupId>
-			<artifactId>spring-boot-admin-server</artifactId>
-			<version>${spring-boot-admin.version}</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>de.codecentric</groupId>
-			<artifactId>spring-boot-admin-server-ui</artifactId>
-			<version>${spring-boot-admin.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>de.codecentric</groupId>
-			<artifactId>spring-boot-admin-server-ui-login</artifactId>
-			<version>${spring-boot-admin.version}</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
         <dependency>
             <groupId>org.springframework.ldap</groupId>
