--- a/spring-boot-admin-heroku/pom.xml
+++ b/spring-boot-admin-heroku/pom.xml
@@ -2,17 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>de.tbosch.spring.boot.admin</groupId>
 	<artifactId>spring-boot-admin-heroku</artifactId>
-	<version>1.2.0</version>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.3.RELEASE</version>
+		<groupId>de.tbosch.spring.boot.admin</groupId>
+		<artifactId>spring-boot-admin-samples</artifactId>
+		<relativePath>..<relativePath>
 	</parent>
 	<properties>
 		<java.version>9</java.version>
-		<spring-boot-admin.version>2.0.1</spring-boot-admin.version>
 	</properties>
 	<dependencies>
 		<dependency>
