--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.3.RELEASE</version>
+		<version>2.6.7</version>
 	</parent>
 	<properties>
-		<revision>1.0.0-SNAPSHOT</revision>
-		<spring-boot-admin.version>2.0.1</spring-boot-admin.version>
+		<revision>1.1.0-SNAPSHOT</revision>
+		<spring-boot-admin.version>2.6.7</spring-boot-admin.version>
 	</properties>
 	<modules>
 		<module>spring-boot-admin-heroku</module>
